# react-webmcp

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  me.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
demos/: README.md
projects/VRM-model/: .dockerignore  .env.example  .gitignore  Makefile  README.md  VRM-7B_model_spec.md  pyproject.toml
projects/VRM-model/configs/: ds_zero3.json  stage1_sft_full.yaml  stage1_sft_lora.yaml  stage2_grpo.yaml  stage3_rejection_sft.yaml
projects/VRM-model/configs/data/: rl_recipe.yaml  sft_recipe.yaml
projects/VRM-model/configs/eval/: full.yaml  negative_control.yaml  quick.yaml
projects/VRM-model/docker/: dataprep.Dockerfile  eval.Dockerfile  train.Dockerfile
projects/VRM-model/docs/: bootstrap.md  budgets.md  design.md  plan.md  runbook.md
projects/VRM-model/docs/plans/: 00-bootstrap.md  01-docker-images.md  02-runpod-infra.md  03-data-schema-verifiers.md  04-data-normalize.md  05-data-filter-distill.md  06-stage1-sft.md  07-stage2-grpo.md  08-stage3-rejection-sft.md  09-eval-harness.md  10-ci-workflow.md  11-cd-data-and-train.md  12-cd-eval-release.md  13-runbook-budgets.md
projects/VRM-model/scripts/: bootstrap-gh.sh  bootstrap-hf.py  bootstrap-runpod-volume.py  pod-entrypoint.sh  release-promote.py  smoke-base-inference.sh
projects/VRM-model/src/vrm/: __init__.py  cli.py
projects/VRM-model/src/vrm/data/: build.py  cli.py  distill.py  filter.py  recipe.py  schema.py
projects/VRM-model/src/vrm/eval/: cli.py  compare.py  parse_results.py  run_vlmevalkit.py
projects/VRM-model/src/vrm/infra/: budget.py  hf_hub.py  runpod.py  webhook.py
projects/VRM-model/tests/: conftest.py
projects/VRM-model/tests/unit/: test_budget.py  test_cli.py  test_data_build.py  test_data_cli.py  test_distill.py  test_eval_cli_parse.py  test_eval_compare.py  test_eval_parse.py  test_filter.py  test_hf_hub.py  test_normalize_base.py  test_normalizers_smoke.py  test_recipe.py  test_release_promote.py  test_reward.py  test_runpod_client.py  test_schema.py  test_stage1_render.py  test_stage3_sample.py  test_verifiers_format.py  test_verifiers_latex.py  test_verifiers_mc.py  test_verifiers_numeric.py  test_verifiers_registry.py  test_verifiers_span.py  test_webhook.py
(+383 files in other folders)
